Change in config.yml

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -23,4 +23,4 @@ jobs:
           command: ./packer validate centos-ami-template.json
       - run:
           name: Build AMI
-          command: ./packer build centos-ami-template.json 
+          command: ./packer build centos-ami.json 
